RESOLVED FIXED263994
mModeFlags uses a signed variable instead of unsigned for bits even though mModeFlags is a UInt64
https://bugs.webkit.org/show_bug.cgi?id=263994
Summary mModeFlags uses a signed variable instead of unsigned for bits even though mM...
Seija K.
Reported 2023-10-31 13:45:26 PDT
The value we use to bitwise AND should be unsigned or else we risk overflowing an integer and sign extending 1.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-07 12:46:14 PST
Ahmad Saleem
Comment 2 2024-01-22 06:48:12 PST
EWS
Comment 3 2024-01-22 07:29:44 PST
Committed 273298@main (bb40425085b9): <https://commits.webkit.org/273298@main> Reviewed commits have been landed. Closing PR #19791 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.