Variable used to obtain a bit value from mModeFlags is sign extended https://bugs.webkit.org/show_bug.cgi?id=263994

Reviewed by Simon Fraser.

mModeFlags is a UInt64, which means we risk overflowing an integer when
we use a signed integer to obtain bit-packed flags from it instead of
using an unsigned long long.

* Source/WebCore/platform/graphics/cocoa/CMUtilities.mm:
(WebCore::PacketDurationParser::framesInPacket): Use an unsigned value
  to obtain the flags stored in mModeFlags.

Canonical link: https://commits.webkit.org/273298@main